[gd_scene load_steps=2 format=3 uid="uid://ds1ufo3eqhpbd"]

[ext_resource type="Script" path="res://Menu/level_select.gd" id="1_8apv1"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8apv1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(0.992157, 0.933333, 0, 1)
theme_override_font_sizes/font_size = 35
text = "Choose a Level"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level1" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 10)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
text = "Level 1"

[node name="Level2" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 10)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
text = "Level 2"

[node name="Level3" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 10)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
text = "Level 3"

[node name="Level4" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 10)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
text = "Level 4"

[node name="Level5" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 10)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
text = "Level 5"

[node name="Level6" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 10)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
text = "Level 6"

[node name="Level7" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 10)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
text = "Level 7"

[node name="Level8" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 10)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
text = "Level 8"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="QuitToMenu" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 10)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
text = "Quit To Menu"

[connection signal="pressed" from="VBoxContainer/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="VBoxContainer/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="VBoxContainer/Level4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="VBoxContainer/Level5" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="VBoxContainer/Level6" to="." method="_on_level_6_pressed"]
[connection signal="pressed" from="VBoxContainer/Level7" to="." method="_on_level_7_pressed"]
[connection signal="pressed" from="VBoxContainer/Level8" to="." method="_on_level_8_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitToMenu" to="." method="_on_quit_to_menu_pressed"]
